--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="og:site_name" content="Oshi no Ko">
   <meta name="og:type" content="object">
   <meta name="og:image" content="">
-  <meta name="og:title" content="Ev">
+  <meta name="og:title" content="Oshi no Ko">
   <meta name="og:description" content="Türkçe Topluluk Sunucusu">
   <meta name="og:url" content="">
   <meta name="theme-color" content="#4b81e6">
