--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <div class="hero-subtitle-link">
             <h3><a> Türkçe Topluluk Sunucusu </a></h3>
           </div>
-          <a href="https://discord.gg/fH8dR64Jwy" class="button-discord"><i class="fab fa-discord"></i> Discord</a>
+          <a href="https://discord.gg/hAhDW3xnRA" class="button-discord"><i class="fab fa-discord"></i> Discord</a>
           <div class="space-250px"></div>
           <!--** SCROLL MOUSE - START **-->
           <div class="moving-mouse-holder">
